# ink-contracts

./: TESTREPORT.md
accContract/: Cargo.toml  build-all.sh  lib.rs
accContract/.ink/abi_gen/: Cargo.toml  main.rs
coreContract/: Cargo.toml  build-all.sh  lib.rs  lib_test.rs  temp.rs
coreContract/.ink/abi_gen/: Cargo.toml  main.rs
coreContract/regtrSSTContract/: Cargo.toml  lib.rs
coreContract/roleContract/: Cargo.toml  lib.rs
regtrSSTContract/: Cargo.toml  build-all.sh  lib.rs
regtrSSTContract/.ink/abi_gen/: Cargo.toml  main.rs
roleContract/: Cargo.toml  lib_test.rs
roleContract/.ink/abi_gen/: Cargo.toml  main.rs
